Fix error in updating user-agent and accept-language

We never reset the state to indicate an update is no longer under way.

Task-number: QTBUG-60588
Change-Id: I13e2f85e4c957bb100e5f91ab07b2f2b04db4a11
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>